call api login, logout

--- a/CafeManagerDestopApp/CafeManagerDestopApp/MainScreen.resx
+++ b/CafeManagerDestopApp/CafeManagerDestopApp/MainScreen.resx
@@ -188,4 +188,24 @@
         AAAASUVORK5CYII=
 </value>
   </data>
+  <data name="logout_btn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACgAAAAoCAYAAACM/rhtAAAABGdBTUEAALGPC/xhBQAAA2BJREFUWEfd
+        mMlrFEEUh5MgGoIGSUAkQsS4G7eLIkYNoqLGi0LABA+ai+jJgwbxIkbcDuKGCP4NuYoiRDwo5uBy8KC4
+        L6i4IC4Hd43fr+v1dE9nlp6ZnhDywQdJvVfvFTPT1dVdMeIZGBiox1bswO2m/l6G9ZY2tNB4KZ7Fh5iP
+        +3gKF9v08kCDSmzHu1gst3CjlUwOis7GG+qQhZ/4CLUAqb9/YTau4DQrXxoU2obfVTXCHdyDC3CUpafQ
+        GC7Bo3gPo3zFDksvDgoc9kqlcxVbLCU2zGnD6M/jH+61lMJg4gGvRMAX3GrhomB+Fe7EHxim21LiwQRt
+        HX+8qY5n2GzhkqFWC75TYUOfZLuF80NyNb7STHiKky2UGNRswvdqYHzGKRbOD8kNqA13vA0lDrWXo3YA
+        n4sWGj6wqF1ubSnWWSgeTJiF5fwUtR3pbuNz3UL5Ifm4m+NdwdNtOHGovcnrEjDXQtkh6aTLTbHFQolD
+        bd1Gn3tdHEcslBkSoovToWCchcsC9U97nRw3bXgwBDMtbpKFywY9VnndHNqDaywUwOAxLxwwJIsT9BmL
+        2rB95lvIwcAJN57GBTxfhOdwg5WODXPeok8wn39Wu7FE+YuN1iIW5D/wZjo6bdgLrHBjiaLzYEE/D/LD
+        C0w/ijHQ48bTuIyZvsJ8nsGVVjo2zAnfm9tsOIDB6CJf4lQLlxX61HodAzJv1gQOuniKFxj/lFEk9Fjr
+        dXP8xmoLDYZgpkXWWbgsUF9Xvk+/DWeHpOgiuyyUONTWrc4/f4oeC+WGxP2oXf0jNtlw4lC7E8PMtFB+
+        SJ6IZbsPU3s0PkGfPgsND1jQPreuFK0Wyg2JembQe5YJNpQ41NaVG34467VQbkisQf+p6zXOsFBiUHMO
+        flID4wPGu/OQWIfhVxdvcJGFS4Za+uTCi9OnuN7C8WDCbm9qwDfUA06VpRQMc3VB6DcX/lrFDkspDCZ2
+        Y/iMJm6jXmNUWlpelIvaSsJXq9BCi1ucDwX0QKOHpiiP8RDqJFRr6Sk0hvoqdYcIb8I++s0V9rVmg0KN
+        eElVc6DDpk7gMnzwzEQvNlj55KDoGrymDkXSh/H2uVKgSTPq1ZxeVkZ/8GF0KulHHePi376ShMZ60bQQ
+        deHoXc5m+3sejrG0kUpFxX89s3ka8vWuLgAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
